--- a/index.html
+++ b/index.html
@@ -15,7 +15,32 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World !</h1>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+
+        <div class="row">
+          <div class="col-6">
+            <img src="" alt="Clear" />
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation : 0%</li>
+              <li>Humidity : 37%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+        <small>
+          <a href="https://github.com/elic4vet/weather-app" target="blank">
+            Open-source code</a
+          >
+          by Elisabeth Erkekoglou
+        </small>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
