--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
+        <div class="weather-wrapper">
+          <h1>New York</h1>
+          <ul>
+            <li>Friday 05:00</li>
+            <li>Clear</li>
+          </ul>
 
-        <div class="row">
-          <div class="col-6">
-            <img src="" alt="Clear" />
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Precipitation : 0%</li>
-              <li>Humidity : 37%</li>
-              <li>Wind: 2 km/h</li>
-            </ul>
+          <div class="row">
+            <div class="col-6">
+              <img src="" alt="Clear" />
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation : 0%</li>
+                <li>Humidity : 37%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
