--- a/index.html
+++ b/index.html
@@ -30,21 +30,24 @@
               <img src="" alt="Clear" />
             </div>
             <div class="col-6">
-              <ul>
-                <li>Precipitation : 0%</li>
-                <li>Humidity : 37%</li>
-                <li>Wind: 2 km/h</li>
-              </ul>
+              <div class="float-left">
+                <strong> 12 </strong> <span class="units"> °C </span>
+                <ul>
+                  <li>Precipitation : 0%</li>
+                  <li>Humidity : 37%</li>
+                  <li>Wind: 2 km/h</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-        <small>
-          <a href="https://github.com/elic4vet/weather-app" target="blank">
-            Open-source code</a
-          >
-          by Elisabeth Erkekoglou
-        </small>
       </div>
+      <small>
+        <a href="https://github.com/elic4vet/weather-app" target="blank">
+          Open-source code</a
+        >
+        by Elisabeth Erkekoglou
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
