--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="container">
       <div class="weather-app">
         <div class="weather-wrapper">
-          <h1>New York</h1>
+          <h1 id="city"></h1>
           <ul>
             <li>Friday 05:00</li>
-            <li>Clear</li>
+            <li id="description">Clear</li>
           </ul>
 
           <div class="row">
@@ -31,7 +31,8 @@
             </div>
             <div class="col-6">
               <div class="float-left">
-                <strong> 12 </strong> <span class="units"> °C </span>
+                <strong id="temperature"> 12 </strong>
+                <span class="units"> °C </span>
                 <ul>
                   <li>Precipitation : 0%</li>
                   <li>Humidity : 37%</li>
