--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h1 id="city"></h1>
           <ul>
             <li>Friday 05:00</li>
-            <li id="description">Clear</li>
+            <li id="description"></li>
           </ul>
 
           <div class="row">
@@ -31,12 +31,12 @@
             </div>
             <div class="col-6">
               <div class="float-left">
-                <strong id="temperature"> 12 </strong>
+                <strong id="temperature"> </strong>
                 <span class="units"> °C </span>
                 <ul>
-                  <li>Precipitation : 0%</li>
-                  <li>Humidity : 37%</li>
-                  <li>Wind: 2 km/h</li>
+                  <li id="precipitation">precipitation : 0%</li>
+                  <li id="humidity">humidity : 37%</li>
+                  <li id="Wind">wind: 2 km/h</li>
                 </ul>
               </div>
             </div>
