--- a/index.html
+++ b/index.html
@@ -27,28 +27,32 @@
 
           <div class="row">
             <div class="col-6">
-              <img src="" alt="Clear" />
+               <img src="" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
+                  <strong id="temperature"></strong
+                  ><span class="units"> °C</span>
+                </div>
+              </div>
             </div>
+
             <div class="col-6">
-              <div class="float-left">
-                <strong id="temperature"> </strong>
-                <span class="units"> °C </span>
-                <ul>
-                  <li id="precipitation">precipitation : 0%</li>
-                  <li id="humidity">humidity : 37%</li>
-                  <li id="Wind">wind: 2 km/h</li>
-                </ul>
+               <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> m/h</li>
+              </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <small>
-        <a href="https://github.com/elic4vet/weather-app" target="blank">
-          Open-source code</a
-        >
-        by Elisabeth Erkekoglou
-      </small>
+      <footer>
+        <small>
+          <a href="https://github.com/elic4vet/weather-app" target="blank">
+            Open-source code</a
+          >
+          by Elisabeth Erkekoglou
+        </small>
+      </footer>
     </div>
     <script src="src/app.js"></script>
   </body>
