--- a/index.html
+++ b/index.html
@@ -17,17 +17,40 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <div class="weather-wrapper">
-          <h1 id="city"></h1>
-          <ul>
-            <li>Friday 05:00</li>
-            <li id="description"></li>
-          </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <div class="overview">
+            <h1 id="city"></h1>
+            <ul>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
+            </ul>
+          </div>
 
           <div class="row">
             <div class="col-6">
-               <img src="" alt="Clear" id="icon" class="float-left" />
+              <div class="clearfix weather-temperature">
+                <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong
                   ><span class="units"> °C</span>
@@ -36,24 +59,34 @@
             </div>
 
             <div class="col-6">
-               <ul>
+              <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> m/h</li>
               </ul>
-              </div>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast"></div>
+
+          <div class="col-6">
+            <ul>
+              <li>Humidity: <span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span> m/h</li>
+            </ul>
+          </div>
         </div>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
-      <footer>
-        <small>
-          <a href="https://github.com/elic4vet/weather-app" target="blank">
-            Open-source code</a
-          >
-          by Elisabeth Erkekoglou
-        </small>
-      </footer>
     </div>
+
+    <footer>
+      <small>
+        <a href="https://github.com/elic4vet/weather-app" target="blank">
+          Open-source code</a
+        >
+        by Elisabeth Erkekoglou
+      </small>
+    </footer>
+
     <script src="src/app.js"></script>
   </body>
 </html>
