--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-6">
               <div class="clearfix weather-temperature">
                 <img
-                  src="icons/cloudsun.svg"
+                  src=""
                   alt="Clear"
                   id="icon"
                   class="float-left"
