--- a/index.html
+++ b/index.html
@@ -49,13 +49,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src=""
-                  alt="Clear"
-                  id="icon"
-                  class="float-left"
-                  width="100px"
-                />
+                <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong
                   ><span class="units"> °C</span>
