--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id="forecast"></div>
+          <div class="weather-forecast" id="forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thu</div>
+                <div class="weather-forecast-temperature">18 12</div>
+              </div>
+            </div>
+          </div>
         </div>
         <footer>
           <small>
