--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
             <div class="row">
               <div class="col-2">
                 <div class="weather-forecast-date">Thu</div>
-                <div class="weather-forecast-temperature">18 12</div>
+                <div class="weather-forecast-temperature">
+                  <span class="weather-forecast-temperature-max"> 18°</span>
+                  <span class="weather-forecast-temperature-min"> 12° </span>
+                </div>
               </div>
             </div>
           </div>
