--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                       <span class="weather-forecast-temperature-min">
                         12°
                       </span>
+                      <div class="weather-sounds" id="player">
+                        <audio preload="auto" controls="controls">
+                          <source src="/sounds/rain.mp3" type="audio/mpeg" />
+                          <source src="/sounds/birds.mp3" type="audio/mpeg" />
+                        </audio>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -87,6 +93,7 @@
         </div>
       </div>
     </div>
+
     <footer>
       <small>
         <a href="https://github.com/elic4vet/weather-app" target="blank">
