--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
                     <div class="col-1">
                       <br />
-                      <img
+                      <input
+                        type="image"
                         src="icons/placeholder.png"
-                        id="current-location-button"
                         width="40px"
+                        id="current-location-button"
                       />
                     </div>
                   </div>
@@ -87,19 +88,6 @@
                       <span class="weather-forecast-temperature-min">
                         12°
                       </span>
-                      <div class="hide-div" id="player-wrap">
-                        <audio controls id="player" style="display: none">
-                          <source
-                            src="/sounds/rain.mp3"
-                            type="audio/mpeg"
-                            id="player-src1"
-                          />
-                          <source
-                            src="/sounds/birds.mp3"
-                            type="audio/mpeg"
-                            id="player-src2"
-                          />
-                        </audio>
                       </div>
                     </div>
                   </div>
@@ -116,7 +104,7 @@
         <a href="https://github.com/elic4vet/weather-app" target="blank">
           Open-source code</a
         >
-        by Elisabeth Erkekoglou
+        by 👩‍💻 <a href="https://www.linkedin.com/in/elisavet-erkekoglou-80514b107/"> Elisavet Erkekoglou </a>
       </small>
     </footer>
     <script src="src/app.js"></script>
