--- a/index.html
+++ b/index.html
@@ -100,12 +100,10 @@
     </div>
 
     <footer>
-      <small>
         <a href="https://github.com/elic4vet/weather-app" target="blank">
           Open-source code</a
         >
-        by 👩‍💻 <a href="https://www.linkedin.com/in/elisavet-erkekoglou-80514b107/"> Elisavet Erkekoglou </a>
-      </small>
+        by <a href="https://www.linkedin.com/in/elisavet-erkekoglou-80514b107/"> Elisavet Erkekoglou 👩‍💻 </a>
     </footer>
     <script src="src/app.js"></script>
   </body>
